ciacao do formulario de login e senha

--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-       <h1> Hello Word</h1>
+       <center>    <h1> Hello Word jidsig</h1>
+      <label>Utlizador</label>
       <input type="text" placeholder=" Introduza o teu nome">
       <br>
+      <label>Palavra Passe</label>
       <input type="password" placeholder=" Introduza a password">
       <br>
-       <button>click</button>
+       <button>click</button></center>
 </body>
 </html>
