Login na nova branch dev

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
        <center>    <h1> Hello Word jidsig</h1>
-      <label>Utlizador</label>
+      <label>Utilizador</label>
       <input type="text" placeholder=" Introduza o teu nome">
       <br>
       <label>Palavra Passe</label>
