Teste da nova pagina para a branch teste

--- a/Teste.html
+++ b/Teste.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-       <center>    <h1> Hello Word jidsig jjibi alocacao</h1>
+       <center>    <h1> Teste</h1>
       <label>Utilizador</label>
       <input type="text" placeholder=" Introduza o teu nome">
       <br>
