--- a/Teste.html
+++ b/Teste.html
@@ -9,11 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-       <center>    <h1> Teste</h1>
-      <label>Utilizador</label>
+       <center>    <h1> Login</h1>
+      <label>Introduza o seu nomeUtilizador</label>
       <input type="text" placeholder=" Introduza o teu nome">
       <br>
-      <label>Palavra Passe</label>
+      <label>Introduza a palavra passe Palavra Passe</label>
       <input type="password" placeholder=" Introduza a password">
       <br>
        <button>click</button></center>
