--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ola</h1>
+    <h1>Completa Login</h1>
     
     <input type="text" placeholder=" Intrduza o seu nome">
     <input type="date" placeholder=" Intrduza a sua data de nascimento">
